@@ -4,6 +4,8 @@ What's New for PSPRadio
 NEW FEATURES
 (sandberg) 3DUI: Messages from the PSPRadio (e.g. when downloading the list from shoutcast.com) are now shown in a seperate panel. (r746)
 (sandberg) 3DUI: The UI now supports 4 different fonts (Lists, Scroller, System info and Messages/Errors). (r747)
+(sandberg) 3DUI: Both messages and errors are now displayed using the native panels, scaled to fit the message length. (r748)
+(sandberg) 3DUI: Support for colored native panels has been added, which is used for the message and error panels. (r748)
 
 BUG FIXES
 (sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)
